# renderdoc-mcp

./: GUI_WIREFRAME.md  MIGRATION_CHECKLIST.md  MODULE_RESPONSIBILITIES.md  README.md  README_MCP.md  REFACTOR_BLUEPRINT.md  TECH_STACK_DECISION.md  _tmp_capture_surpass.py  pyproject.toml  run_renderdoc_workbench.py  start_renderdoc_workbench.bat
mcp/: compat_tools.py  external_tools_proxy.py  renderdoc_mcp_server.py
src/renderdoc_workbench/: __init__.py
src/renderdoc_workbench/adapters/: _legacy_loader.py
src/renderdoc_workbench/adapters/filesystem/: service.py
src/renderdoc_workbench/adapters/mcp/: __init__.py  legacy_server.py
src/renderdoc_workbench/adapters/renderdoc/: __init__.py  service.py  shader_catalog_capture.py
src/renderdoc_workbench/adapters/reporting/: __init__.py  service.py
src/renderdoc_workbench/adapters/targets/: __init__.py  service.py
src/renderdoc_workbench/cli/: main.py
src/renderdoc_workbench/config/: __init__.py  defaults.py
src/renderdoc_workbench/core/: __init__.py  errors.py  models.py  protocols.py  services.py
src/renderdoc_workbench/gui/: app.py  main_window.py
src/renderdoc_workbench/workflows/: analysis.py  export.py  launch.py  rdc_browser.py  shader_catalog.py  shader_transpile.py
